syntax = "proto3";

package claid_sensor_data;

option go_package = "claid.ethz.ch/claid_sensor_data";

option java_package = "adamma.c4dhi.claid_sensor_data";
option java_outer_classname = "ClaidSensorData";
option java_multiple_files = true;

enum AudioEncoding
{
    ENCODING_PCM_8BIT = 0;
    ENCODING_PCM_16BIT = 1;
    ENCODING_PCM_FLOAT = 2;
    ENCODING_PCM_24_BIT_PACKED = 3;
    ENCODING_PCM_32_BIT = 4;
}

enum AudioChannels
{
    CHANNEL_MONO = 0;
    CHANNEL_STEREO = 1;
    CHANNEL_QUAD = 2;
    CHANNEL_5POINT1 = 3;
    CHANNEL_7POINT1_SURROUND = 4;
}

message AudioData
{
    bytes data = 1;
    int32 sampling_rate = 2;
    int32 bit_rate = 3;
    AudioEncoding encoding = 4;
    AudioChannels channels = 5;
}

